--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -6,7 +6,15 @@ on:
   workflow_dispatch:
 
 jobs:
+
   build:
+    permissions:
+      contents: write
+      packages: write
+      pull-requests: write
+      issues: write
+      statuses: write
+      deployments: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
