--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -24,11 +24,11 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install requests bs4 jsbeautifier PyGithub
+          pip install requests 
       - name: Lint with flake8
         run: |
           python ./src/buildHistory.py
-          ls
+          ls ptb
         env:
           WEBHOOK: ${{ secrets.WEBHOOK }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
