--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -25,22 +25,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install requests 
-      - name: Lint with flake8
+      - name: Run script
         run: |
           python ./src/buildHistory.py
           ls ptb
         env:
           WEBHOOK: ${{ secrets.WEBHOOK }}
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-      - name: Setup git
-        run: |
-          git config --local user.email "happyendermangit@github.com"
-          git config --local user.name "|__.JS.__|"
-          
-      - name: Push content
-        run: |
-          git add ./ptb || git commit -am "✅ PTB Builds updated!"
-          git add ./canary || git commit -am "✅ Canary Builds updated!"
-          git add ./stable || git commit -am "✅ Stable Builds updated!"
-          
-          git push
+ 
