--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -24,7 +24,7 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install requests 
+          pip install requests PyGithub
       - name: Run script
         run: |
           python ./src/buildHistory.py
