--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -42,3 +42,5 @@ jobs:
             git add ./builds/canary
             git add ./builds/stable
             git commit -am "✅ Data updated!" 
+            git push
+      
