--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -33,8 +33,8 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       - name: set email
         run: |
-          git config --local user.email "happyendermangit@github.com"
-          git config --local user.name "happyendermangit"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
 
       - name: commit
         run: |
