--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -41,6 +41,7 @@ jobs:
             git add ./builds/ptb
             git add ./builds/canary
             git add ./builds/stable
+            git add ./builds.json
             git commit -am "✅ Data updated!" 
             git push
       
